Fixing heading width causing wrapping issue with links

--- a/src/input/css/global.css
+++ b/src/input/css/global.css
@@ -58,10 +58,6 @@ main {
 	text-wrap: balance;
 }
 
-:is(h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6) {
-	inline-size: fit-content;
-}
-
 h1,
 .h1 {
 	font-size: var(--font-size-7);
